# Robot-AI-ROS2

./: README.md
install/: local_setup.sh  setup.sh
install/g1_manipulation/lib/g1_manipulation/: walk.py  wave_right_arm
install/g1_manipulation/share/ament_index/resource_index/package_run_dependencies/: g1_manipulation
install/g1_manipulation/share/g1_manipulation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/g1_manipulation/share/g1_manipulation/cmake/: g1_manipulationConfig.cmake
install/g1_manipulation/share/g1_manipulation/include/g1_manipulation/: wave_right_arm.hpp
install/g1_manipulation/share/g1_manipulation/launch/: spawn_g1.launch.py
install/g1_manipulation/share/g1_manipulation/meshes/hand/visual/: finger_collision.dae
install/g1_manipulation/share/g1_manipulation/rviz/: g1.rviz
log/: latest_build
src/g1_manipulation/: CMakeLists.txt
src/g1_manipulation/g1_manipulation/: walk.py
src/g1_manipulation/meshes/hand/visual/: finger.dae
src/g1_manipulation/src/: wave_right_arm.cpp
src/g1_manipulation/urdf/: g1.urdf
